--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -3,9 +3,14 @@
 <input #bookName placeholder="name" (keyup)="onKey(bookName.value)"/>
 <ul>
   <li *ngFor="let book of books;">
+    <input type="checkbox" (click)="select(book.id, $event.target.checked)">
     <span>{{book.name}}</span>
   </li>
 </ul>
+
+<span>selected items: {{selected}}</span>
+<br>
+<br>
 
 <input #newBook placeholder="add book"/><br>
 <button (click)="add(newBook.value)">submit</button>
