--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -10,20 +10,9 @@
 
 <div class="selectize-control demo-default multi">
   <div class="selectize-input items not-full has-options has-items">
-    <div class="item" *ngFor="let book of books;">{{book.name}}</div>
-    <input type="text" autocomplete="off" tabindex="" id="input-tags-selectized">
+    <div class="item" *ngFor="let book of books;" (click)="select(book.id)">
+       {{book.name}}
+    </div>
+    <input id="bookAdd" type="text" #bookAdd placeholder="to add" id="input-tags-selectized" (keyup.enter)="onAdd(bookAdd.value); bookAdd.value = ''" (keyup.backspace)="onRemove()">
+  </div>
 </div>
-
-
-<br>
-<br>
-
-<input #newBook placeholder="add book"/><br>
-<button (click)="add(newBook.value)">submit</button>
-
-<br>
-<br>
-
-
-
-<input id="bookAdd" type="text" #bookAdd placeholder="to add" value={{addedBooksValue}} (keyup.enter)="onAdd(bookAdd.value)" (keyup.backspace)="onRemove()">
