--- a/src/app/books/books.component.css
+++ b/src/app/books/books.component.css
@@ -26,7 +26,6 @@
 .selectize-dropdown, .selectize-input, .selectize-input input {
     font-family: inherit;
     font-size: 13px;
-    -webkit-font-smoothing: inherit;
     line-height: 18px;
     color: #303030;
 }
@@ -34,17 +33,9 @@
 .selectize-control.multi .selectize-input [data-value] {
     text-shadow: 0 1px 0 rgba(0, 51, 83, 0.3);
     background-color: #1b9dec;
-    background-image: -moz-linear-gradient(top, #1da7ee, #178ee9);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1da7ee), to(#178ee9));
-    background-image: -webkit-linear-gradient(top, #1da7ee, #178ee9);
-    background-image: -o-linear-gradient(top, #1da7ee, #178ee9);
     background-image: linear-gradient(to bottom, #1da7ee, #178ee9);
     background-repeat: repeat-x;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
     border-radius: 3px;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1da7ee', endColorstr='#ff178ee9', GradientType=0);
-    -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), inset 0 1px rgba(255, 255, 255, 0.03);
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), inset 0 1px rgba(255, 255, 255, 0.03);
 }
 
@@ -71,6 +62,8 @@
     content: ' ';
 }
 
+
+
 #input-tags-selectized {
     position: absolute;
     border: 0;
@@ -80,4 +73,8 @@
 
 #input-tags-selectized:focus{
     outline: none;
+}
+
+.item:active {
+    font-size: 15px;
 }
