--- a/src/app/books/books.component.css
+++ b/src/app/books/books.component.css
@@ -8,6 +8,7 @@
 .selectize-control.multi .selectize-input.has-items {
     padding-right: 5px;
     padding-left: 5px;
+    min-height: 25px;
 }
 
 .selectize-control.multi .selectize-input.has-items {
