--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,18 +1,14 @@
 <h2>My books</h2>
 
-<input #bookName placeholder="name" (keyup)="onKey(bookName.value)"/>
-<ul>
-  <li *ngFor="let book of books;">
-    <input type="checkbox" [checked]="book.checked" (click)="select(book.id, $event.target.checked)" >
-    <span>{{book.name}}</span>
-  </li>
-</ul>
-
 <div class="selectize-control demo-default multi">
   <div class="selectize-input items not-full has-options has-items">
-    <div class="item" *ngFor="let book of books;" (click)="select(book.id)">
+    <div class="item" *ngFor="let book of books;" (click)="onSelect(book.id)"
+    [ngStyle]="{'background':book.checked ? '#333333' : '#1da7ee' }">
        {{book.name}}
     </div>
-    <input id="bookAdd" type="text" #bookAdd placeholder="to add" id="input-tags-selectized" (keyup.enter)="onAdd(bookAdd.value); bookAdd.value = ''" (keyup.backspace)="onRemove()">
+    <input id="bookAdd" type="text" #bookAdd placeholder="to add" id="input-tags-selectized"
+     (keyup.enter)="onAdd(bookAdd.value); bookAdd.value = ''" 
+     (keyup.backspace)="onRemove()"
+     (keyup)="onFilter(bookAdd.value)">
   </div>
 </div>
