--- a/src/app/selectizes/selectizes.component.css
+++ b/src/app/selectizes/selectizes.component.css
@@ -79,3 +79,23 @@
 .item:active {
     font-size: 15px;
 }
+
+#selectize-remove{
+    background-image: url("./remove.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color:transparent;
+    border: 0;
+    padding: 0;
+    width: 11px;
+    height: 11px;
+    margin-bottom: 0px;
+}
+
+#selectize-input-filter {
+    border: 1px solid #d0d0d0;
+    border-radius: 3px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
+    padding: 5px;
+}
